bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: argo.purplebelly.local
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: argocd-server
            path: /
            pathType: Prefix
